Mes img ne sont pas collé :(

--- a/examen50/index.html
+++ b/examen50/index.html
@@ -12,40 +12,49 @@
 </head>
 <body>
 <div class="container">
+    <!------------------- bouton  -------------------->
+    <div class="row no-gutters">
+        <div class="col-2">
+            <button type="button" class="btn btn-danger" id="boutonRecommencer">Recommencer</button>
+        </div>
+        <div class="col-2">
+            <button type="button" class="btn btn-danger" id="boutonTricher">Tricher</button>
+        </div>
+    </div>
     <!------------ première rangée  ------------->
     <div class="row no-gutters" id="premiererangee">
-        <div class="col-xl-8">
+        <div class="col-2">
             <img src="img/img1.jpg" alt="klimt" id="1" class="img-fluid">
         </div>
-        <div class="col-xl-8">
+        <div class="col-2">
             <img src="img/img2.jpg" alt="klimt" id="2" class="img-fluid">
         </div>
-        <div class="col-xl-8">
+        <div class="col-2">
             <img src="img/img3.jpg" alt="klimt" id="3" class="img-fluid">
         </div>
     </div>
         <!----------2em rangées  ----------->
-    <div class="row no-guttters" id="rangee2">
-        <div class="col-4">
-            <img src="img/img4.jpg" alt="klimt" id="4">
+    <div class="row no-gutters" id="rangee2">
+        <div class="col-2">
+            <img src="img/img4.jpg" alt="klimt" id="4" class="img-fluid">
         </div>
-        <div class="col-4">
-            <img src="img/img5.jpg" alt="klimt" id="5">
+        <div class="col-2">
+            <img src="img/img5.jpg" alt="klimt" id="5" class="img-fluid">
         </div>
-        <div class="col-4">
-            <img src="img/img6.jpg" alt="klimt" id="6">
+        <div class="col-2">
+            <img src="img/img6.jpg" alt="klimt" id="6" class="img-fluid">
         </div>
     </div>
     <!----------3em rangées  ----------->
     <div class="row no-gutters" id="rangee3">
-        <div class="col-4">
-            <img src="img/img7.jpg" alt="klimt" id="7">
+        <div class="col-2">
+            <img src="img/img7.jpg" alt="klimt" id="7" class="img-fluid">
         </div>
-        <div class="col-4">
-            <img src="img/img8.jpg" alt="klimt" id="8">
+        <div class="col-2">
+            <img src="img/img8.jpg" alt="klimt" id="8" class="img-fluid">
         </div>
-        <div class="col-4">
-            <img src="img/img9.jpg" alt="klimt" id="9">
+        <div class="col-2">
+            <img src="img/img9.jpg" alt="klimt" id="9" class="img-fluid">
         </div>
     </div>
 
@@ -76,6 +85,6 @@
 
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
-<script src="casseTete.js"></script>
+<script src="js/casseTete.js"></script>
 </body>
 </html>
