--- a/examen50/index.html
+++ b/examen50/index.html
@@ -21,40 +21,41 @@
             <button type="button" class="btn btn-danger" id="boutonTricher">Tricher</button>
         </div>
     </div>
+            <img id="victoire" alt="Histoire de jouet" src="img/victoire.jpg" width="400px"/>
     <!------------ première rangée  ------------->
     <div class="row no-gutters" id="premiererangee">
         <div class="col-2">
-            <img src="img/img1.jpg" alt="klimt" id="1" class="img-fluid">
+            <img src="img/img8.jpg" alt="klimt" id="1" class="img-fluid">
         </div>
         <div class="col-2">
-            <img src="img/img2.jpg" alt="klimt" id="2" class="img-fluid">
+            <img src="img/img6.jpg" alt="klimt" id="2" class="img-fluid">
         </div>
         <div class="col-2">
-            <img src="img/img3.jpg" alt="klimt" id="3" class="img-fluid">
+            <img src="img/img4.jpg" alt="klimt" id="3" class="img-fluid">
         </div>
     </div>
         <!----------2em rangées  ----------->
     <div class="row no-gutters" id="rangee2">
         <div class="col-2">
-            <img src="img/img4.jpg" alt="klimt" id="4" class="img-fluid">
+            <img src="img/img2.jpg" alt="klimt" id="4" class="img-fluid">
         </div>
         <div class="col-2">
-            <img src="img/img5.jpg" alt="klimt" id="5" class="img-fluid">
+            <img src="img/img9.jpg" alt="klimt" id="5" class="img-fluid">
         </div>
         <div class="col-2">
-            <img src="img/img6.jpg" alt="klimt" id="6" class="img-fluid">
+            <img src="img/img7.jpg" alt="klimt" id="6" class="img-fluid">
         </div>
     </div>
     <!----------3em rangées  ----------->
     <div class="row no-gutters" id="rangee3">
         <div class="col-2">
-            <img src="img/img7.jpg" alt="klimt" id="7" class="img-fluid">
+            <img src="img/img5.jpg" alt="klimt" id="7" class="img-fluid">
         </div>
         <div class="col-2">
-            <img src="img/img8.jpg" alt="klimt" id="8" class="img-fluid">
+            <img src="img/img3.jpg" alt="klimt" id="8" class="img-fluid">
         </div>
         <div class="col-2">
-            <img src="img/img9.jpg" alt="klimt" id="9" class="img-fluid">
+            <img src="img/img1.jpg" alt="klimt" id="9" class="img-fluid">
         </div>
     </div>
 
