Publication des examens

--- a/examen50/index.html
+++ b/examen50/index.html
@@ -84,8 +84,8 @@
 
 
 
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/bootstrap.js"></script>
-<script src="js/casseTete.js"></script>
+<script src="casseTete.js/jquery-3.3.1.min.js"></script>
+<script src="casseTete.js/bootstrap.js"></script>
+<script src="casseTete.js/casseTete.js"></script>
 </body>
 </html>
