Commencer le site de Sylvie Massé

--- a/Sommatif_2/Index.html
+++ b/Sommatif_2/Index.html
@@ -14,12 +14,12 @@
 <body>
 <!-- Zone 1  -->
     <div class="container-fluid parallax h-100">
-        <div class="row h-75 align-items-end espaceBas">
-            <div class="col-xl-3 offset-xl-6">
-                <h2 class="carreJaune" >Nouveau dès l'automne 2018 baisse des préalables en mathématique!</h2>
-            </div>
+        <div class="row">
+            <div class="col-12">
+
+                <img src="../MassothérapieSM/img/back.jpg" height="2515" width="3772"/></div>
         </div>
-        <div class="row h-25 carreGris align-items-center">
+
             <div class="col-12">
                 <h3>Techniques de l'informatique 420,bo</h3>
             </div>
