--- a/Projet_Final_IW2/index.html
+++ b/Projet_Final_IW2/index.html
@@ -116,7 +116,7 @@
 
 <div class="container-fluid parallaxZone3 h-100">
     <div class="row no-gutters">
-        <div class="offset-xl-6 col-xl-4 col-md-6 text-black paddingZone3 text-justify">
+        <div class="offset-xl-6 col-xl-4 col-md-6 text-blawck paddingZone3 text-justify">
             <h1 class="iphone ipad">Le chemin de Compostelle : un pèlerinage inoubliable</h1>
             <p class="formatxs formatmd">Beaucoup de gens parlent DU chemin de Compostelle (Santiago de compostela). Mais en réalité, il serait plus juste d’évoquer LES chemins de Compostelle. En effet, les chemins menant vers Compostelle (en Espagne) sont toutes les routes de pèlerinage qui ont été empruntées par différents marcheurs.</p>
         </div>
