fini pour aujourdhui

--- a/MassothérapieSM/index.html
+++ b/MassothérapieSM/index.html
@@ -9,9 +9,6 @@
 </head>
 <body class="bg">
 
-
-
-
 <!-- Zone Menu  -->
 
 <!-- Zone Accueil  -->
@@ -39,26 +36,51 @@
         </div>
 
         <div class="col-6">
-            <img src="img/sensation.png" height="308" width="398"/>
+            <img src="img/sensation.png"  width="801"/>
         </div>
-
     </div>
     <div class="row no-gutters">
         <div class="col-6">
-             <img src="img/Photo.png" height="308" width="398"/>
+             <img src="img/Photo.png"  width="801"/>
         </div>
         <div class="col-6 text-center paddingZoneaccueil">
             <h2>Sylvie Massé</h2>
             <p> </p>
         </div>
-
-
-
     </div>
 </div>
 <!-- Zone Soins  -->
+<section id="soins">
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-6 text-center paddingZoneaccueil">
+                <h2>Sylvie Massé</h2>
+                <p> </p>
+            </div>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-4">
+                         <img src="img/pregnant.jpg" height="164" width="164"/>
+                    </div>
+                    <div class="col-4">
+                        <img src="img/enfant1.jpg" height="164" width="164"/>
+                    </div>
+                    <div class="col-4">
+                        <img src="img/Image.png" height="164" width="164"/>
+                    </div>
+                    <div class="col-4">
+                        <img src="img/réflexology-1.png" height="164" width="164"/>
+                    </div>
+            </div>
+            <div class="col-6">
+                <img src="img/sensation.png"  width="801"/>
+            </div>
+        </div>
+    </div>
 
 
+</section>
 <!-- Zone Atelier  -->
 
 
