--- a/MassothérapieSM/index.html
+++ b/MassothérapieSM/index.html
@@ -54,11 +54,11 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-6 text-center paddingZoneaccueil">
+            <div class="col-xl-6 text-center paddingZoneaccueil">
                 <h2>Sylvie Massé</h2>
                 <p> Bacon ipsum dolor amet porchetta buffalo chicken biltong shoulder. Turkey short loin landjaeger, venison cow prosciutto spare ribs alcatra sausage pork chop pastrami rump picanha brisket. Landjaeger strip steak ham hock, pork chop ribeye jowl beef ribs drumstick pastrami tri-tip fatback flank shoulder. Burgdoggen tenderloin shoulder bacon beef ribs turkey jerky kevin cow drumstick tongue meatball.</p>
             </div>
-            <div class="container-fluid">
+            <div class="container">
                 <div class="row no-gutters">
                     <div class="col-4 no-gutters"><img src="img/pregnant.jpg" height="164" width="164"/></div>
                     <div class="col-4 no-gutters"><img src="img/enfant1.jpg" height="164" width="164"/></div>
@@ -66,7 +66,7 @@
                     <div class="col-4 no-gutters"><img src="img/réflexology-1.png" height="164" width="164"/></div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-xl-6">
                 <img src="img/sensation.png"  width="801"/>
             </div>
         </div>
@@ -243,52 +243,63 @@
                     <div class="footer-logo-support d-md-flex align-items-end justify-content-between">
                         <div class="footer-logo d-flex align-items-end">
                             <a class="mt-30" href="index.html"><img src="img/Logo_V1.png" height="167" width="171"/></a>
+                            <div class="footer-link">
+                                <h6 class="footer-title">Company</h6>
 
-                            <ul class="social mt-30">
-                                <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                                <li><a href="#"><i class="lni-twitter-original"></i></a></li>
-                                <li><a href="#"><i class="lni-instagram-original"></i></a></li>
-                                <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
-                            </ul>
-                        </div> <!-- footer logo -->
+                            </div>
+                            <div class="footer-link">
+                                <h6 class="footer-title">Company</h6>
+
+                            </div>
+                            <div class="footer-link">
+                                <h6 class="footer-title">Company</h6>
+
+                            </div>
+                            <!--   <ul class="social mt-30">
+                                  <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
+                                  <li><a href="#"><i class="lni-twitter-original"></i></a></li>
+                                  <li><a href="#"><i class="lni-instagram-original"></i></a></li>
+                                  <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
+                              </ul>
+                          </div> <!-- footer logo -->
 
                     </div> <!-- footer logo support -->
                 </div>
-            </div> <!-- row -->
-            <div class="row">
-                <div class="col-lg-2 col-md-4 col-sm-6">
-                    <div class="footer-link">
-                        <h6 class="footer-title">Company</h6>
+            </div>
+                <!-- <div class="row">
+                     <div class="col-lg-2 col-md-4 col-sm-6">
+                         <div class="footer-link">
+                             <h6 class="footer-title">Company</h6>
 
-                    </div>
-                    <!-- footer link -->
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-6">
-                    <div class="footer-link">
-                        <h6 class="footer-title">Product & Services</h6>
+                         </div>
+                         <!-- footer link -->
+                <!--   </div>
+                 <div class="col-lg-3 col-md-4 col-sm-6">
+                     <div class="footer-link">
+                         <h6 class="footer-title">Product & Services</h6>
 
-                    </div>
-                    <!-- footer link -->
-                </div>
-                <div class="col-lg-3 col-md-4 col-sm-5">
-                    <div class="footer-link">
-                        <h6 class="footer-title">Help & Suuport</h6>
+                     </div>
+                     <!-- footer link -->
+            <!--  </div>
+             <div class="col-lg-3 col-md-4 col-sm-5">
+                 <div class="footer-link">
+                     <h6 class="footer-title">Help & Suuport</h6>
 
-                    </div>
-                    <!-- footer link -->
-                </div>
-                <div class="col-lg-4 col-md-6 col-sm-7">
-                    <div class="footer-newsletter">
-                        <h6 class="footer-title">Inscrivez-vous à notre infolettre</h6>
-                        <div class="newsletter">
-                            <form action="#">
-                                <input type="text" placeholder="Votre courriel">
-                                <button type="submit"><i class="lni-angle-double-right"></i></button>
-                            </form>
-                        </div>
-                        <p class="text">Pour rester à l'affut de tout mes ateliers</p>
-                    </div>
-                    <!-- footer newsletter -->
+                 </div>
+                 <!-- footer link -->
+            <!--   </div>
+              <div class="col-lg-4 col-md-6 col-sm-7">
+                  <div class="footer-newsletter">
+                      <h6 class="footer-title">Inscrivez-vous à notre infolettre</h6>
+                      <div class="newsletter">
+                          <form action="#">
+                              <input type="text" placeholder="Votre courriel">
+                              <button type="submit"><i class="lni-angle-double-right"></i></button>
+                          </form>
+                      </div>
+                      <p class="text">Pour rester à l'affut de tout mes ateliers</p>
+                  </div>
+                  <!-- footer newsletter -->
                 </div>
             </div>
         </div>
