prise 3 zone soins

--- a/MassothérapieSM/index.html
+++ b/MassothérapieSM/index.html
@@ -66,9 +66,12 @@
                     <div class="col-4 no-gutters"><img src="img/réflexology-1.png" height="164" width="164"/></div>
                 </div>
             </div>
-            <div class="col-xl-6">
-                <img src="img/sensation.png"  width="801"/>
+            <div class="container">
+                <div class="col-xl-6">
+                    <img src="img/sensation.png"  width="801"/>
+                </div>
             </div>
+
         </div>
     </div>
 </section>
@@ -236,7 +239,7 @@
 <!-- Zone Pied de page -->
 
 <footer id="footer" class="footer-area">
-    <div class="footer-widget">
+    <div class="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -255,54 +258,31 @@
                                 <h6 class="footer-title">Company</h6>
 
                             </div>
+                            <div class="footer-newsletter">
+                                <h6 class="footer-title">Inscrivez-vous à notre infolettre</h6>
+                                <div class="newsletter">
+                                    <form action="#">
+                                        <input type="text" placeholder="Votre courriel">
+                                        <button type="submit"><i class="lni-angle-double-right"></i></button>
+                                    </form>
+                                </div>
+                                <p class="text">Pour rester à l'affut de tout mes ateliers</p>
+                            </div>
                             <!--   <ul class="social mt-30">
                                   <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
                                   <li><a href="#"><i class="lni-twitter-original"></i></a></li>
                                   <li><a href="#"><i class="lni-instagram-original"></i></a></li>
                                   <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
                               </ul>
-                          </div> <!-- footer logo -->
+                          </div>  -->
 
-                    </div> <!-- footer logo support -->
+                        </div>
+                    </div>
                 </div>
             </div>
-                <!-- <div class="row">
-                     <div class="col-lg-2 col-md-4 col-sm-6">
-                         <div class="footer-link">
-                             <h6 class="footer-title">Company</h6>
 
-                         </div>
-                         <!-- footer link -->
-                <!--   </div>
-                 <div class="col-lg-3 col-md-4 col-sm-6">
-                     <div class="footer-link">
-                         <h6 class="footer-title">Product & Services</h6>
-
-                     </div>
-                     <!-- footer link -->
-            <!--  </div>
-             <div class="col-lg-3 col-md-4 col-sm-5">
-                 <div class="footer-link">
-                     <h6 class="footer-title">Help & Suuport</h6>
-
-                 </div>
-                 <!-- footer link -->
-            <!--   </div>
-              <div class="col-lg-4 col-md-6 col-sm-7">
-                  <div class="footer-newsletter">
-                      <h6 class="footer-title">Inscrivez-vous à notre infolettre</h6>
-                      <div class="newsletter">
-                          <form action="#">
-                              <input type="text" placeholder="Votre courriel">
-                              <button type="submit"><i class="lni-angle-double-right"></i></button>
-                          </form>
-                      </div>
-                      <p class="text">Pour rester à l'affut de tout mes ateliers</p>
-                  </div>
-                  <!-- footer newsletter -->
-                </div>
-            </div>
         </div>
+    </div>
     </div>
 
     <div class="footer-copyright">
