mes imgs de ma zone soins

--- a/MassothérapieSM/index.html
+++ b/MassothérapieSM/index.html
@@ -57,7 +57,7 @@
             <div class="col-xl-6 text-center paddingZoneaccueil">
                 <h2>Sylvie Massé</h2>
                 <p> Bacon ipsum dolor amet porchetta buffalo chicken biltong shoulder. Turkey short loin landjaeger, venison cow prosciutto spare ribs alcatra sausage pork chop pastrami rump picanha brisket. Landjaeger strip steak ham hock, pork chop ribeye jowl beef ribs drumstick pastrami tri-tip fatback flank shoulder. Burgdoggen tenderloin shoulder bacon beef ribs turkey jerky kevin cow drumstick tongue meatball.</p>
-            </div>
+
             <div class="container">
                 <div class="row no-gutters">
                     <div class="col-4 no-gutters"><img src="img/pregnant.jpg" height="164" width="164"/></div>
@@ -66,12 +66,12 @@
                     <div class="col-4 no-gutters"><img src="img/réflexology-1.png" height="164" width="164"/></div>
                 </div>
             </div>
+            </div>
+            <div class="col-xl-6">
             <div class="container">
-                <div class="col-xl-6">
                     <img src="img/sensation.png"  width="801"/>
                 </div>
             </div>
-
         </div>
     </div>
 </section>
@@ -259,7 +259,7 @@
 
                             </div>
                             <div class="footer-newsletter">
-                                <h6 class="footer-title">Inscrivez-vous à notre infolettre</h6>
+                                <h6 class="footer-h6">Inscrivez-vous à notre infolettre</h6>
                                 <div class="newsletter">
                                     <form action="#">
                                         <input type="text" placeholder="Votre courriel">
