img fluid zone soins

--- a/MassothérapieSM/index.html
+++ b/MassothérapieSM/index.html
@@ -60,10 +60,10 @@
 
             <div class="container">
                 <div class="row no-gutters">
-                    <div class="col-4 no-gutters"><img src="img/pregnant.jpg" height="164" width="164"/></div>
-                    <div class="col-4 no-gutters"><img src="img/enfant1.jpg" height="164" width="164"/></div>
-                    <div class="col-4 no-gutters"><img src="img/Image.png" height="164" width="164"/></div>
-                    <div class="col-4 no-gutters"><img src="img/réflexology-1.png" height="164" width="164"/></div>
+                    <div class="col-4 no-gutters"><img src="img/pregnant.jpg" class="img-fluid"/></div>
+                    <div class="col-4 no-gutters"><img src="img/enfant1.jpg" class="img-fluid"/></div>
+                    <div class="col-4 no-gutters"><img src="img/Image.png"class="img-fluid"/></div>
+                    <div class="col-4 no-gutters"><img src="img/réflexology-1.png" class="img-fluid"/></div>
                 </div>
             </div>
             </div>
