icon font awsome

--- a/MassothérapieSM/index.html
+++ b/MassothérapieSM/index.html
@@ -5,9 +5,6 @@
     <title>Massothérapie Sylvie Massé</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/2e3c369f0c.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://kit.fontawesome.com/2e3c369f0c.js" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
     <link rel="stylesheet" type="text/css" href="css/Style.css">
     <link rel="stylesheet" type="text/css" href="css/Style.css">
 
@@ -16,7 +13,7 @@
 
 <!-- Zone Menu  -->
 
-<!-- Zone Accueil  -->
+<!------------------- Zone Accueil  ---------------------->
 
 <div class="container-fluid">
     <div class="row no-gutters paddingZoneaccueil">
@@ -150,7 +147,7 @@
 <div class="container-contact100">
     <div class="wrap-contact100">
         <form class="contact100-form validate-form" style="background-color: #E0C3AF">
-				<span class="contact100-form-title">
+				<span class="contact100-form-title ">
 					Nous contacter
 				</span>
 
@@ -189,21 +186,20 @@
             </div>
         </form>
 
-        <div class="contact100-more flex-col-c-m" style="background-color: #5B7163">
-            <h1>Contact</h1>
-            <p> bla bla bla bla</p>
+        <div class="contact100-more flex-col-c-m " style="background-color: #5B7163">
+            <h1 class="text-color">Contact</h1>
+            <p class="text-color"> bla bla bla bla</p>
 
-            <i class="fal fa-map-marker"></i><span class="dis-flex">Mada Center 8th floor, 379 Hudson St, New York, NY 10018 US</span>
+            <i class="fal fa-map-marker-alt"></i><span class="dis-flex">Mada Center 8th floor, 379 Hudson St, New York, NY 10018 US</span>
                     <div class="dis-flex"><span>+1 800 1236879</span></div>
                     <div class="dis-flex"><span>maggy@hotma.com</span></div>
+            <ul class="social mt-30">
+                <li><a href="#"><i class="lni-facebook-filled"></i>fav icon</a></li>
+                <li><a href="#"><i class="lni-instagram-original"></i></a></li>
+                <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
+            </ul>
         </div>
-
-     <ul class="social mt-30">
-                         <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                         <li><a href="#"><i class="lni-twitter-original"></i></a></li>
-                         <li><a href="#"><i class="lni-instagram-original"></i></a></li>
-                         <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
-     </ul>
+    </div>
 </div>
 </section>
 <!-- Zone Pied de page -->
