--- a/MassothérapieSM/index.html
+++ b/MassothérapieSM/index.html
@@ -12,11 +12,52 @@
 <body class="bg">
 
 <!-- Zone Menu  -->
+<header class="header-area">
+    <div class="navgition navgition-transparent">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <nav class="navbar navbar-expand-lg">
+                        <a class="navbar-brand" href="#">
+                           <a class="text-color"> <img src="img/Logo_V1.png" height="85" width="89" alt="logo"/> Massothérapie - Sylvie Massé</a>
+                        </a>
 
-<!------------------- Zone Accueil  ---------------------->
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarOne" aria-controls="navbarOne" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="toggler-icon"></span>
+                            <span class="toggler-icon"></span>
+                            <span class="toggler-icon"></span>
+                        </button>
 
-<div class="container-fluid">
-    <div class="row no-gutters paddingZoneaccueil">
+                        <div class="collapse navbar-collapse sub-menu-bar" id="navbarOne">
+                            <ul class="navbar-nav m-auto">
+                                <li class="nav-item active">
+                                    <a class="page-scroll" href="#home">Accueil</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="page-scroll" href="#about">À propos</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="page-scroll" href="#soins">Soin</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="page-scroll" href="#service">Atelier</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="page-scroll" href="#Contact">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav> <!-- navbar -->
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
+    </div> <!-- navgition -->
+</header>
+
+<!------------------- Zone Accueil  ------------------------->
+<section id="home">
+<div class="container-fluid paddingZoneapropos">
+    <div class="row no-gutters">
         <div class="col-6">
             <img src="../MassothérapieSM/img/back.jpg" width="900"/>
         </div>
@@ -27,14 +68,15 @@
          </div>
     </div>
 </div>
-
-<!-- Zone À propos  -->
-
+</section>
+<!------------------- Zone À propos  ----------------------->
+<section id="about">
 <div class="container-fluid">
     <div class="row no-gutters paddingZoneapropos">
         <div class="col-6 text-center paddingZoneaccueil">
             <h2>Sylvie Massé</h2>
-            <p> </p>
+            <p> Bacon ipsum dolor amet porchetta buffalo chicken biltong shoulder. Turkey short loin landjaeger, venison cow prosciutto spare ribs alcatra sausage pork chop pastrami rump picanha brisket. Landjaeger strip steak ham hock, pork chop ribeye jowl beef ribs drumstick pastrami tri-tip fatback flank shoulder. Burgdoggen tenderloin shoulder bacon beef ribs turkey jerky kevin cow drumstick tongue meatball.</p>
+
         </div>
 
         <div class="col-6">
@@ -47,31 +89,43 @@
         </div>
         <div class="col-6 text-center paddingZoneaccueil">
             <h2>Sylvie Massé</h2>
-            <p> </p>
+            <p> Bacon ipsum dolor amet porchetta buffalo chicken biltong shoulder. Turkey short loin landjaeger, venison cow prosciutto spare ribs alcatra sausage pork chop pastrami rump picanha brisket. Landjaeger strip steak ham hock, pork chop ribeye jowl beef ribs drumstick pastrami tri-tip fatback flank shoulder. Burgdoggen tenderloin shoulder bacon beef ribs turkey jerky kevin cow drumstick tongue meatball.</p>
+
         </div>
     </div>
 </div>
+</section>
+
 <!-- Zone Soins  -->
 <section id="soins">
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-xl-6 text-center paddingZoneaccueil">
-                <h2>Sylvie Massé</h2>
-                <p> Bacon ipsum dolor amet porchetta buffalo chicken biltong shoulder. Turkey short loin landjaeger, venison cow prosciutto spare ribs alcatra sausage pork chop pastrami rump picanha brisket. Landjaeger strip steak ham hock, pork chop ribeye jowl beef ribs drumstick pastrami tri-tip fatback flank shoulder. Burgdoggen tenderloin shoulder bacon beef ribs turkey jerky kevin cow drumstick tongue meatball.</p>
+            <div class="col-xl-8 text-center paddingZoneaccueil">
 
             <div class="container">
                 <div class="row no-gutters">
-                    <div class="col-6 no-gutters"><img src="img/pregnant.jpg" class="img-fluid"/></div>
-                    <div class="col-6 no-gutters"><img src="img/enfant1.jpg" class="img-fluid"/></div>
-                    <div class="col-6 no-gutters"><img src="img/Image.png" class="img-fluid"/></div>
-                    <div class="col-6 no-gutters"><img src="img/réflexology-1.png" class="img-fluid"/></div>
+                    <input type="image" id="enceinte" class="col-5 no-gutters"src="img/enceinte_.jpg" class="img-fluid">
+                    <div class="col-5 no-gutters"><img src="img/enfant2.png" class="img-fluid"/></div>
+                    <div class="col-5 no-gutters"><img src="img/Image.png" class="img-fluid"/></div>
+                    <div class="col-5 no-gutters"><img src="img/feet1.jpg" class="img-fluid"/></div>
                 </div>
             </div>
             </div>
-            <div class="col-xl-6">
-            <div class="container">
-                    <img src="img/sensation.png"  width="801"/>
+
+            <!------------- DROITE  ------------->
+            <div class="col-xl-4">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xl-4 text-center paddingZoneaccueil">
+                            <h2>Sylvie Massé</h2>
+                            <p id="droite"> Bacon ipsum dolor amet porchetta buffalo chicken biltong shoulder. Turkey short loin landjaeger, venison cow prosciutto spare ribs alcatra sausage pork chop pastrami rump picanha brisket. Landjaeger strip steak ham hock, pork chop ribeye jowl beef ribs drumstick pastrami tri-tip fatback flank shoulder. Burgdoggen tenderloin shoulder bacon beef ribs turkey jerky kevin cow drumstick tongue meatball.</p>
+                            <span class="price">$ 199</span>
+                            <div class="pricing-btn text-center">
+                                <button class="btn-secondary btn-lg">réserver</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -80,7 +134,7 @@
 
 
 <!-- Zone Atelier  -->
-<section id="pricing" class="pricing-area">
+<section id="service" class="pricing-area">
     <div class="container" style="background-color: #F3F3EE">
         <div class="row justify-content-center">
             <div class="col-lg-6">
@@ -96,6 +150,7 @@
             <div class="col-lg-4 col-md-7 col-sm-9">
                 <div class="single-pricing mt-40">
                     <div class="pricing-header text-center">
+                        <img class="img-pricing" src="img/baby.jpg" alt="Avatar"/>
                         <h5 class="sub-title">Basic</h5>
                         <span class="price">$ 199</span>
                         <p class="year">per year</p>
@@ -109,7 +164,7 @@
                         </ul>
                     </div>
                     <div class="pricing-btn text-center">
-                        <a class="main-btn" href="#">GET STARTED</a>
+                        <button class="btn-secondary btn-lg">réserver</button>
                     </div>
 
                 </div>
@@ -118,6 +173,7 @@
             <div class="col-lg-4 col-md-7 col-sm-9">
                 <div class="single-pricing mt-40">
                     <div class="pricing-header text-center">
+                        <img class="img-pricing" src="img/reflexo.jpg" alt="Avatar"/>
                         <h5 class="sub-title">Basic</h5>
                         <span class="price">$ 199</span>
                         <p class="year">per year</p>
@@ -131,20 +187,18 @@
                         </ul>
                     </div>
                     <div class="pricing-btn text-center">
-                        <a class="main-btn" href="#">GET STARTED</a>
+                        <button class="btn-secondary btn-lg">réserver</button>
                     </div>
 
                 </div>
             </div>
+        </div>
     </div>
 </section>
 
-
-
-
 <!-- Zone Contact  -->
 <section id="Contact">
-<div class="container-contact100">
+<div class="container-contact100 ">
     <div class="wrap-contact100">
         <form class="contact100-form validate-form" style="background-color: #E0C3AF">
 				<span class="contact100-form-title ">
@@ -187,80 +241,54 @@
         </form>
 
         <div class="contact100-more flex-col-c-m " style="background-color: #5B7163">
-            <h1 class="text-color">Contact</h1>
-            <p class="text-color"> bla bla bla bla</p>
+            <h1 class="text-color dis-flex">Contact</h1>
+            <p class="text-color dis-flex"> bla bla bla bla</p>
 
-            <i class="fal fa-map-marker-alt"></i><span class="dis-flex">Mada Center 8th floor, 379 Hudson St, New York, NY 10018 US</span>
-                    <div class="dis-flex"><span>+1 800 1236879</span></div>
-                    <div class="dis-flex"><span>maggy@hotma.com</span></div>
-            <ul class="social mt-30">
-                <li><a href="#"><i class="lni-facebook-filled"></i>fav icon</a></li>
-                <li><a href="#"><i class="lni-instagram-original"></i></a></li>
-                <li><a href="#"><i class="lni-linkedin-original"></i></a></li>
-            </ul>
+                    <div class="dis-flex">
+                        <i class="fas fa-map-pin fa-3x icon"></i>
+                        <span>Mada Center 8th floor, 379 Hudson St, New York, NY 10018 US</span>
+                    </div>
+
+
+                    <div class="dis-flex">
+                        <i class="fas fa-phone fa-3x icon"></i>
+                        <span>+1 800 1236879</span>
+                    </div>
+
+                    <div class="dis-flex">
+                        <i class="far fa-envelope fa-3x icon"></i>
+                        <span>maggy@hotma.com</span>
+                    </div>
         </div>
     </div>
 </div>
 </section>
+
+
 <!-- Zone Pied de page -->
-
-<footer id="footer" class="footer-area">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                        <div class=" d-flex align-items-end">
-                            <a class="mt-30" href="index.html"><img src="img/Logo_V1.png" height="167" width="171"/></a>
-                            <div class="footer-link">
-                                <h6 class="footer-title">Company</h6>
-
-                            </div>
-                            <div class="footer-link">
-                                <h6 class="footer-title">Company</h6>
-
-                            </div>
-                            <div class="footer-link">
-                                <h6 class="footer-title">Company</h6>
-
-                            </div>
-                            <div class="footer-newsletter align-items-end">
-                                <h6 class="footer-h6">Inscrivez-vous à notre infolettre</h6>
-                                <div class="newsletter">
-                                    <form action="#">
-                                        <input type="text" placeholder="Votre courriel">
-                                        <button type="submit"><i class="lni-angle-double-right"></i></button>
-                                    </form>
-                                </div>
-                                <p class="text">Pour rester à l'affut de tout mes ateliers</p>
-                            </div>
-
-<button class="back-to-top btn-toolbar"></button>
-                        </div>
+<footer id="footer" class=" text-center footer-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="main-footer  ">
+                    <ul class="social">
+                        <li><a class="dis-flex" href="#"><i class="fab fa-facebook-f fa-2x dis-flex"></i></a></li>
+                        <li><a class="dis-flex" href="#"><i class="fab fa-instagram fa-2x dis-flex"></i></a></li>
+                        <li><a class="dis-flex" href="#"><i class="fas fa-dna fa-2x dis-flex"></i></a></li>
+                    </ul>
                 </div>
             </div>
-
         </div>
     </div>
-
-    <div class="footer-copyright">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="copyright text-center">
-                        <p class="text">Template Crafted by <a rel="nofollow" href="https://uideck.com">UIdeck</a> - UI Powered by <a el="nofollow" href="https://rebrand.ly/ayroui">AyroUI</a></p>
-                    </div>
-                </div>
-            </div>
+    <div class="row">
+        <div class="col-12 copyright footer-copyright">
+            <p>Copyright  <a href="#">Maggy Gagné Lemire</a></p>
         </div>
     </div>
 </footer>
 
-
-
-
-
-
 <script src="js/jquery-3.3.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 <script src="js/bootstrap.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 </body>
 </html>
