--- a/templatemo_421_raleway/index.html
+++ b/templatemo_421_raleway/index.html
@@ -356,3 +356,76 @@ http://www.templatemo.com/preview/templatemo_421_raleway
 	<script src="js/templatemo_custom.js"></script>
 </body>
 </html>
+
+<footer id="footer" class="footer-area">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 text-center">
+				<div class="navbar-social d-none d-sm-flex align-items-center">
+					<span>FOLLOW US</span>
+					<ul>
+						<li><a href="#"><i class="fab fa-facebook-f fa-3x dis-flex"></i></a></li>
+						<li><a href="#"><i class="fab fa-instagram fa-3x dis-flex"></i></a></li>
+						<li><a href="#"><i class="fas fa-dna fa-3x dis-flex"></i></a></li>
+					</ul>
+				</div>
+			</div>
+
+
+			<div class="col-lg-12">
+				<div class=" d-flex ">
+					<a class="mt-30" href="index.html"><img src="img/Logo_V1.png" /></a>
+					<div class="footer-link">
+						<h6 class="footer-title">Company</h6>
+
+					</div>
+					<div class="footer-link">
+						<h6 class="footer-title">Company</h6>
+
+					</div>
+					<div class="footer-link">
+						<h6 class="footer-title">Company</h6>
+
+					</div>
+					<div class="footer-newsletter ">
+						<h6 class="footer-h6">Inscrivez-vous à notre infolettre</h6>
+						<div class="newsletter">
+							<form action="#">
+								<input type="text" placeholder="Votre courriel">
+								<button type="submit"><i class="lni-angle-double-right"></i></button>
+							</form>
+						</div>
+						<p class="text">Pour rester à l'affut de tout mes ateliers</p>
+					</div>
+
+					<button class="back-to-top btn-toolbar"></button>
+				</div>
+			</div>
+		</div>
+
+	</div>
+	</div>
+
+	<div class="footer-copyright">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="copyright text-center">
+						<p class="text">Template Crafted by <a rel="nofollow" href="https://uideck.com">UIdeck</a> - UI Powered by <a el="nofollow" href="https://rebrand.ly/ayroui">AyroUI</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="social mt-30 dis-flex">
+		<i class="fab fa-facebook-f fa-3x"></i>
+	</div>
+	<div class="social mt-30 dis-flex">
+		<i class="fab fa-instagram fa-3x"></i>
+	</div>
+	<div class="social mt-30 dis-flex">
+		<i class="fas fa-dna fa-3x">Molécule en action</i>
+	</div>
+
+</footer>
+
