--- a/MassothérapieSM/index.html
+++ b/MassothérapieSM/index.html
@@ -103,12 +103,40 @@
         <div class="row">
             <div class="col-xl-8 text-center paddingZoneaccueil">
 
+
+
             <div class="container">
-                <div class="row no-gutters">
-                    <input type="image" id="enceinte" class="col-5 no-gutters"src="img/enceinte_.jpg" class="img-fluid">
-                    <div class="col-5 no-gutters"><img src="img/enfant2.png" class="img-fluid"/></div>
-                    <div class="col-5 no-gutters"><img src="img/Image.png" class="img-fluid"/></div>
-                    <div class="col-5 no-gutters"><img src="img/feet1.jpg" class="img-fluid"/></div>
+                    <div class="row no-gutters ">
+
+
+                        <div class="col-5 no-gutters imgsoins">
+                            <img src="img/enceinte_.jpg" class="img-fluid image "  style="width:100%"/>
+                            <div class="middle">
+                                <input type="boutton" value="Massage pour femmes enceintes" class="text-soin" id="Enfant">
+                            </div>
+                        </div>
+
+
+                    <div class="col-5 no-gutters imgsoins">
+                        <img src="img/enfant2.png" class="img-fluid image "  style="width:100%"/>
+                            <div class="middle">
+                                <input type="boutton" value="Massage enfant" class="text-soin" id="Enfant">
+                            </div>
+                    </div>
+
+                        <div class="col-5 no-gutters imgsoins">
+                            <img src="img/Image.png" class="img-fluid image "  style="width:100%"/>
+                            <div class="middle">
+                                <input type="boutton" value="Massage suédois" class="text-soin" id="Enfant">
+                            </div>
+                        </div>
+
+                        <div class="col-5 no-gutters imgsoins">
+                            <img src="img/feet1.jpg" class="img-fluid image "  style="width:100%"/>
+                            <div class="middle">
+                                <input type="boutton" value="Réflexologie" class="text-soin" id="Enfant">
+                            </div>
+                        </div>
                 </div>
             </div>
             </div>
