--- a/MassothérapieSM/index.html
+++ b/MassothérapieSM/index.html
@@ -112,7 +112,7 @@
                         <div class="col-5 no-gutters imgsoins">
                             <img src="img/enceinte_.jpg" class="img-fluid image "  style="width:100%"/>
                             <div class="middle">
-                                <input type="boutton" value="Massage pour femmes enceintes" class="text-soin" id="Enfant">
+                                <input type="button" value="Massage pour femmes enceintes" class="text-soin" id="enceinte">
                             </div>
                         </div>
 
@@ -120,21 +120,21 @@
                     <div class="col-5 no-gutters imgsoins">
                         <img src="img/enfant2.png" class="img-fluid image "  style="width:100%"/>
                             <div class="middle">
-                                <input type="boutton" value="Massage enfant" class="text-soin" id="Enfant">
+                                <input type="button" value="Massage enfant" class="text-soin" id="Enfant">
                             </div>
                     </div>
 
                         <div class="col-5 no-gutters imgsoins">
                             <img src="img/Image.png" class="img-fluid image "  style="width:100%"/>
                             <div class="middle">
-                                <input type="boutton" value="Massage suédois" class="text-soin" id="Enfant">
+                                <input type="button" value="Massage suédois" class="text-soin" id="Suédois">
                             </div>
                         </div>
 
                         <div class="col-5 no-gutters imgsoins">
                             <img src="img/feet1.jpg" class="img-fluid image "  style="width:100%"/>
                             <div class="middle">
-                                <input type="boutton" value="Réflexologie" class="text-soin" id="Enfant">
+                                <input type="button" value="Réflexologie" class="text-soin" id="Réflexo">
                             </div>
                         </div>
                 </div>
