Zone Accueil Responsive
J'arrive pas a mettre mon img fluid

--- a/MassothérapieSM/index.html
+++ b/MassothérapieSM/index.html
@@ -59,7 +59,7 @@
 <div class="container-fluid paddingZoneapropos">
     <div class="row no-gutters">
         <div class="col-6">
-            <img src="../MassothérapieSM/img/back.jpg" width="900"/>
+            <img src="../MassothérapieSM/img/back.jpg" width="900" class="imgAccueil"/>
         </div>
 
         <div class="col-6 text-center paddingZoneaccueil">
@@ -70,7 +70,7 @@
 </div>
 </section>
 <!------------------- Zone À propos  ----------------------->
-<section id="about">
+<section id="about" class="about">
 <div class="container-fluid">
     <div class="row no-gutters paddingZoneapropos">
         <div class="col-6 text-center paddingZoneaccueil">
