--- a/MassothérapieSM/index.html
+++ b/MassothérapieSM/index.html
@@ -317,6 +317,7 @@
 
 <script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
+<script src="js/index.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 </body>
 </html>
